<resources>
    <string name="app_name">CalculatorApp</string>

    <string name="hint_num1">Enter First Number</string>
    <string name="hint_num2">Enter Second Number</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>

    <string name="result">Result</string>

    <string name="empty_error">Enter numbers</string>
</resources>